Fixed dark mode button position

--- a/src/main/resources/dark-mode.css
+++ b/src/main/resources/dark-mode.css
@@ -89,8 +89,11 @@
 .table-view .column-header-background {
     -fx-background-color: #252525 ;
 }
-.table-view .column-header {
+.table-view .column-header, .table-view .filler {
     -fx-background-color: transparent;
+}
+.table-view .column-header:empty {
+    -fx-background-color: #252525;
 }
 
 .list-cell:even,
@@ -100,7 +103,7 @@
     -fx-control-inner-background: #252525;
 }
 
-/*
+
 .list-cell:empty,
 .table-row-cell:empty {
     -fx-background-color: transparent;
@@ -110,4 +113,4 @@
 .table-row-cell{
     -fx-border-color: transparent;
     -fx-table-cell-border-color:transparent;
-}*/
+}
